# linear

./: .gitignore  Makefile.am  configure  configure.ac  lcp.cpp  lcp.h  lcp_lemke.cpp  lcp_pgs.cpp  lcp_pivot.cpp  linear.h  lu.c  lu.cpp  matrix.cpp  misc.cpp  misc.h  readme.md  solve.cpp  test.cpp  test1.cpp  test_euler.cpp  test_inverse.cpp  test_lcp.cpp  test_lu.cpp  test_prime.cpp  test_solve.cpp
msvc2013/: msvc2013.sln
msvc2013/msvc2013/: msvc2013.vcxproj  msvc2013.vcxproj.filters
msvc2013/test/: test.vcxproj
msvc2013/test_euler/: test_euler.vcxproj  test_euler.vcxproj.filters
msvc2013/test_inverse/: test_inverse.vcxproj  test_inverse.vcxproj.filters
msvc2013/test_lcp/: test_lcp.vcxproj  test_lcp.vcxproj.filters
msvc2013/test_lu/: test_lu.vcxproj  test_lu.vcxproj.filters
msvc2013/test_mlcp/: test_mlcp.vcxproj  test_mlcp.vcxproj.filters
msvc2013/test_prime/: test_prime.vcxproj  test_prime.vcxproj.filters
msvc2013/test_solve/: test_solve.vcxproj  test_solve.vcxproj.filters
src/: Makefile.am  config.h.in  lcp.cpp  lcp.h  lcp_lemke.cpp  lcp_pgs.cpp  lcp_pivot.cpp  linear.h  lu.cpp  mflib.h  misc.cpp  misc.h  mlcp.cpp  mlcp_lemke.cpp  mlcp_pgs.cpp  mlcp_solver.cpp  mlcp_sor.cpp  solve.cpp  test.cpp  test_euler.cpp  test_inverse.cpp  test_lcp.cpp  test_lu.cpp  test_mlcp.cpp  test_solve.cpp
src/ode/: common.h  error.cpp  fastdot.c  fastldlt.c  fastlsolve.c  fastltsolve.c  lcp.cpp  lcp.h  mat.cpp  mat.h  matrix.cpp  matrix.h  misc.cpp  objects.cpp  objects.h  odeconfig.h  timer.cpp  util.cpp  util.h
